[package]
name = "maxminddb-rust-bench"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maxminddb = "0.13.0"
fake = "2.2.0"
rayon = "1.2.0"
env_logger = "0.6.2"
log = "0.4.8"
