[package]
name = "maxminddb_rust_bench"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2018"

[dependencies]
maxminddb = "0.13.0"
fake = "2.2.0"
rayon = "1.2.0"
criterion = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "maxminddb"
harness = false
